Client logging added, with timestamp